# Job_Alert_System

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
smart_job_alert/: alerts.py  cli.py  config.py  db.py  filters.py  http.py  learn.py  logging_utils.py  models.py  orchestrator.py  ranking.py  scam.py  scheduler.py  text_utils.py
smart_job_alert/sources/: __init__.py  factory.py  foundit_scraper.py  indeed_scraper.py  internshala_scraper.py  linkedin_jobs.py  naukri_scraper.py  remotive_api.py  rss.py
